--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 
     <div id="content"></div>
-    <script src="/dist/vendor.bundle.js"></script>
-    <script src="/dist/bundle.js"></script>
+    <script src="dist/vendor.bundle.js"></script>
+    <script src="dist/bundle.js"></script>
 
 </body>
 
